fix: reduce gap in Navbar styles for improved layout consistency

--- a/app/shared/ui/Navbar/navbar.module.scss
+++ b/app/shared/ui/Navbar/navbar.module.scss
@@ -72,7 +72,7 @@
     flex-direction: column;
     align-items: center;
     color: #fff;
-    gap: 42px;
+    gap: 41px;
     width: 100%;
     margin-top: 2.4rem;
     .bubbleR {
